# howfuckedistheinternet.com

./: .gitignore  README.md  aws_ec2_checkpointsv6.json  aws_ecs_checkpoints.json  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
html/: header.html  index.j2  index.py  style.css
src/howfuckedistheinternet/: config.py  main.py
src/howfuckedistheinternet/services/: __init__.py  atlas.py  aws.py  bgp_tools.py  cloudflare.py  discord.py  gcp.py  google.py  rpki.py  slack.py
tests/google/: gcp_test_data.json  test_gcp.py
