[metadata]
name = howfuckedistheinternet
description = How fucked is the internet
platforms = unix, linux, osx

[options]
packages = howfuckedistheinternet
install_requires =
    ordered_enum>=0.0.8
    httpx>=0.24
    requests>=2,
    ujson>=5.8
python_requires = >=3.10
package_dir = =src

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-asyncio>=0.21.1
    pytest-cov>=2.0
    mypy>=1.5
    flake8>=6.0
    tox>=4.0

# [options.packaging_data]
# howfuckedistheinternet = py.typed

[flake8]
max-line-length = 132
